--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
+ *{
+ 	font-family: "Nanum Gothic", sans-serif;
+ }
