목표 모델, 컨트롤러, 유저 화면

--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -57,7 +57,7 @@
 	<div style="height:5px"></div>
 	- 골윗에서 목표를 달성하고 의미 있는 삶을 가꾸어 나갈 수 있습니다
 	<div style="height:5px"></div>
-	- 골윗이 <b>서포터즈</b>로 부터 얻은 광고 수익은 지향점에 대한 영향력이 큰 분들에게 돌아갑니다
+	- 골윗이 <b>서포터즈</b>로 부터 얻은 광고 수익의 일정 부분은 지향점에 대한 영향력이 큰 분들에게 돌아갑니다
 	<div style="height:5px"></div>
 	골윗은 <span style="color:red">미니멀리즘을 지향</span>합니다
 	<div style="height:5px"></div>
