통계 정보 추가

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,8 @@
 
 <div style="height:10px"></div>
 
+<%= link_to "통계 보기", statistics_path %>
+,
 <%= link_to "목표 생성", new_goal_path %>
 
 <div style="height:10px"></div>
@@ -39,3 +41,4 @@
 	</div>
 <% end %>
  
+<div style="height:10px"></div>
